# pomoxis

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  pomoxis.html  prog_docs.py  programs.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_modules/: index.html  pomoxis.html
_modules/pomoxis/: assess_homopolymers.html  bio.html  catalogue_errors.html  common_errors_from_bam.html  coverage_from_bam.html  find_indels.html  qscores_from_summary.html  ref_seqs_from_bam.html  stats_from_bam.html  subsample_bam.html  summary_from_stats.html  trim_alignments.html  util.html
_sources/: index.rst.txt  modules.rst.txt  pomoxis.rst.txt  programs.rst.txt
conda/: meta.yaml
docs/: Makefile  conf.py  examples.html  examples.rst  genindex.html  index.html  index.rst  modules.html  objects.inv  pomoxis.align.html  pomoxis.apps.html  pomoxis.common.html  pomoxis.html  pomoxis.provider.html  pomoxis.pyscrap.html  programs.rst  py-modindex.html  read_until.html  read_until.rst  search.html  searchindex.js
docs/_modules/: index.html  logging.html  pomoxis.html
docs/_sources/: examples.rst.txt  (+5 more)
pomoxis/: __init__.py  assess_homopolymers.py  bio.py  catalogue_errors.py  common_errors_from_bam.py  coverage_from_bam.py  filter_bam.py  find_indels.py  qscores_from_summary.py  ref_seqs_from_bam.py  split_fastx.py  stats_from_bam.py  subsample_bam.py  summary_from_stats.py  trim_alignments.py  util.py  watcher.py
scripts/: assess_assembly  bwa_align  intersect_assembly_errors  mini_align  mini_assemble
test/: test_cli.py
(+33 files in other folders)
